--- a/css/style.css
+++ b/css/style.css
@@ -362,46 +362,200 @@ img {
 }
 
 
-.modal-search{ /******************************/
+
+/*вспылвающие окна*/
+.window{
+	background-color: #f8f7f4;
+	border-radius:7px;
+	box-shadow:0 20px 20px rgba(0,0,0,.4);
+	padding:12px 15px;
+ 	color:#323232;
+ 	border:1px solid rgba(178,178,178,.52);
+ 	border-radius:5px;
+ 	box-sizing:border-box;
+}
+
+/*окно поиска*/
+.window-search{ 
 	position:absolute;
-	top:50px;
-	right:0;
-	z-index:100;
+	top:55px;
+	right:0; /*335px;*/
+	z-index:20;
 	display:none;
 	width:345px;
-	padding:20px 15px;
+	max-height: 85px;
+	padding:20px 17px; 
 	background-color:#f8f7f4;
 	border-radius:5px;
+	border: 5px solid transparent; /**************/
 	box-sizing:border-box;
 	box-shadow:0 20px 20px rgba(0,0,0,.4);
 }
 
 
-.search:hover .modal-search{
+.search:hover .window-search{
 	display: block;
 }
 
-.modal-search .input-search{
+.window-search .input-search{
  	width:100%;
  	font-size:14px;
 	line-height:24px;
-	padding:10px 15px;
+	padding:12px 15px;
  	color:#323232;
  	border:1px solid rgba(178,178,178,.52);
  	border-radius:5px;
  	box-sizing:border-box;
  }
 
- .modal-search .input-search:hover{
+ .window-search .input-search:hover{
  	padding:9px 14px;
  	border:2px solid rgba(154,154,154,.52);
  }
 
-.modal-search .input-search:focus{
+.window-search .input-search:focus{
 	padding:9px 14px;
 	border:2px solid rgba(46,136,228,.52);
 }
 
+.window-search .input-search:active{
+	padding:9px 14px;
+	border:2px solid rgb(143, 189, 236);
+}
+
+
+
+/*окно входа*/
+.window-login{
+	position:absolute;
+	top:37px;
+	right:0; /*350px;*/
+	z-index:20;
+	display:block;
+	width:280px;
+	max-height: 215px;
+	max-height: 215px;
+	padding:15px 20px;
+	background-color:#f8f7f4;
+	box-sizing:border-box;
+}
+
+.login:hover .window-login{
+	display: block;
+}
+
+.window-login .input-email,
+.window-login .input-password{
+ 	width:100%;
+ 	font-size:14px;
+	line-height:24px;
+	padding:12px 15px;
+ 	color:#323232;
+ 	border:1px solid rgba(178,178,178,.52);
+ 	border-radius:5px;
+ 	box-sizing:border-box;
+ 	margin-bottom: 20px; 
+ }
+
+ .window-login .input-login:hover,
+ .window-login .input-password:hover{
+ 	padding:9px 14px;
+ 	border:2px solid rgba(154,154,154,.52);
+ }
+
+.window-login .input-login:focus,
+.window-login .input-password:focus{
+	padding:9px 14px;
+	border:2px solid rgba(46,136,228,.52);
+}
+
+.window-login .input-login:active,
+.window-login .input-password:active{
+	padding:9px 14px;
+	border:2px solid rgb(143, 189, 236);
+}
+
+.window-login .button-submit{
+	display: inline-block;
+	width: 100px;
+	max-height: 45px;
+	font-size: 18px;
+	line-height: 24px;
+	padding: 13px 25px;
+	vertical-align: middle;
+	text-align: center;
+  	color: #ffffff;
+  	vertical-align: top;
+  	text-decoration: none;
+  	text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+  	background: #f26843;
+  	background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%,);
+  	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  	border-radius: 50px;
+  	border: none;
+  	cursor: pointer;
+}
+
+.window-login .button-submit:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.window-login .button-submit:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.button-links-flex{
+	display: flex;
+	justify-content: space-between;
+}
+
+
+.button-left{
+	border:1px solid black;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+
+}
+
+.links-right {
+	border:1px solid red;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
+.links-right a{
+	font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #323232;
+    text-decoration: none;
+}
+
+/*.login-form-link{
+    display: block;
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #323232;
+    text-decoration: none;
+}
+
+.login-form-link a{
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #323232;
+    text-decoration: none;
+    border-bottom: 1px solid rgba(0,0,0,.3);
+}
+
+.login-form-link-content {
+    
+}*/
 
 
 /*SLIDES*/
