--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ input[type="submit"]:active {
     position: absolute;
     top: 37px;
     right: 0;
-    z-index: 3;
+    z-index: 50;
     display: none;
     width: 540px;
     padding: 20px 15px;
@@ -1959,25 +1959,272 @@ input[type="submit"]:active {
 	color: #ffffff;
 }
 
+
+
+
+/*Фильтры*/
 .filters{
-	display: flex;;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
+	width: 100%;
+	max-height: 133px;
+	margin-bottom: 38px;
+}
+.filters-form{
 	width: 865px;
+	max-height: 133px;
+}
+
+.filters-flex{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 865px;
+	max-height: 195px;
 	margin-right: ;
 	margin-bottom: 40px;
-	border:1px solid red; /*delete*/
+}
+
+.filters-top{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+	width: 100%
+	max-height:38px;
+	margin:0;
+	margin-bottom: 20px;
+	padding: 0;
+}
+
+.filters-bottom{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+	width: 100%;
+	max-height:38px;
+	margin:0;
+	padding: 0;
 }
 
 
-.fillers-label{
+.filter-label{
 	display: block;
 	font-size: 14px;
 	line-height: 16px;
+	margin: 0;
+	margin-bottom: 9px;
+	padding-left: 15px;
+	max-height: 16px;
+}
+
+.by-popularity select{
+	width: 193px;
+	min-height: 38px;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+    padding: 0 13px;
+    font-size: 16px;
+    line-height: 18px;
+    color: #ffffff;
+}
+
+.by-popularity select:focus,
+.by-popularity select:hover {
+    font-weight: 500;
+    color: #000000;
+    background-color: #ffffff;
+}
+
+.price-range-box{
+	width: 220px;
+	max-height: 38px;
+	padding: 8px 23px;
+	box-sizing: border-box;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+}
+
+.price-range-box input{
+	width: 175px;
+	height: 5px;
+	background-color: #ffffff;
+}
+
+.by-fat .fat-inputs-box{
+	width: 415px;
+	min-height: 38px;
+	background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+    padding: 7px 17px;
+    box-sizing:border-box;
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.fat-inputs-box label {
+    position: relative;
+    margin-right: 10px;
+    padding-left: 35px;
+
+    cursor: pointer;
+}
+/**/
+
+.by-fat .fat-inputs-box input{
+	margin-right: 
+}	
+
+.by-fat input[type=radio]{
+    display: none;
 }
 
 
+.fat-filter-radio input[type="radio"] + .radio-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border: 4px solid rgba(255, 255, 255, 0.8);
+}
+
+
+.fat-filter-radio input:checked + .radio-indicator::after {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    margin-left: -7px;
+    margin-top: -6px;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+
+/*.fat-filter-radio input[type="radio"]:focus + .radio-indicator,
+.fat-filter-radio input[type="radio"]:active + .radio-indicator {
+ 	border-color: #ffffff;
+   	border-radius: 50%;
+	border: 3px solid #ffffff;
+}
+*/
+
+/*.fillers-inputs-box{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 705px;
+	max-height: 38px;
+	padding: 8px 23px;
+	box-sizing: border-box;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+}*/
+
+.by-fillers .fillers-inputs-box{
+	width: 703px;
+	min-height: 38px;
+	background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+    padding: 13px 20px;
+    box-sizing:border-box;
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.by-fillers input[type=checkbox] {
+    display: none;
+}
+
+.by-fillers .fillers-inputs-box label {
+    position: relative;
+    margin-right: 18px;
+    padding-left: 30px;
+    cursor: pointer;
+}
+
+.by-fillers .fillers-inputs-box label:last-child {
+    margin-right: 0;
+}
+
+.by-fillers .fillers-inputs-box input[type=checkbox]{
+    display: none;
+}
+
+
+.filler-filter-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  box-sizing: border-box;
+  border: 3px solid rgba(255, 255, 255, 0.8);
+}
+
+
+.filler-filter-checkbox input:checked + .checkbox-indicator::after {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    margin-left: -5.5px;
+    margin-top: -5.5px;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.sorting-submit button{
+	width: 144px;
+	border: 2px solid #f6f8f7;
+	font-size: 16px;
+	line-height:18px;
+	cursor: pointer;
+	color: #ffffff;
+	max-height: 38px;
+    padding: 9px 30px 13px 30px;
+    box-sizing: border-box;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 22px;
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+.sorting-submit button:hover {
+    color: #000;
+    background-color: #ffffff;
+} 
+
+
+.sorting:nth-child(3),
+.sorting:last-child{
+	margin-right: 0;
+}
+
+
+
+/*
 .by-popularity select,
 .price-range-box,
 .fat-inputs-box,
@@ -1987,8 +2234,8 @@ input[type="submit"]:active {
     background-color: rgba(255,255,255,.2);
     border-radius: 17px;
     max-height: 37px;
-    padding: 0;
-    margin:0;
+
+
     font-size: 16px;
     line-height: 18px;
     color: #fff;
@@ -2005,17 +2252,13 @@ input[type="submit"]:active {
 	margin: 0;
 }
 
-/*.price-select-box select{
+.price-select-box select{
 	width: 220px;
     padding: 13px 64px 13px 15px;
-}*/
-
-
-.price-range-box{
-	width: 220px;
-	padding: 8px 23px;
-
 }
+
+
+
 
 .by-fat{
 	width: 415px;
@@ -2037,16 +2280,9 @@ input[type="submit"]:active {
 	padding: 8px 15px;
 }
 
-.sorting-submit button{
-	width: 144px;
-	border: 2px solid #f6f8f7;
-	font-size: 16px;
-	line-height:18px;
-	cursor: pointer;
-	color: #ffffff;
-	max-height: 37px;
-}
 
+}
+*/
 
 .list-wrapper{
 	display: flex;
@@ -2057,6 +2293,9 @@ input[type="submit"]:active {
 	margin-bottom:40px;
 	border:1px solid yellow;
 }
+
+
+
 
 
 
