--- a/css/style.css
+++ b/css/style.css
@@ -61,34 +61,34 @@ img {
 .main-header-flex{
 	display: flex;
 	flex-direction: column;
-	justify-content:space-between;
-	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%;
+	max-height: 107px;
+	padding-top: 10px;
+	margin-bottom: 14px;
+	box-sizing: border-box;
 }
 
 .header-navigations-flex{
 	display: flex;
 	flex-direction: row;
 	justify-content:space-between;
-	align-items: center;
-	flex-wrap: nowrap;
+	min-height: 65px;
+	margin: 0;
 }
 
 .logo{
-	width: 154px;
+	width: 156px;
+	height: 65px;
 }
 
 .main-menu{
-	margin-left: 9px;
+	margin-left: 10px;
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: bold;
 }
 
-/*.main-menu-list{
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}*/
 
 .main-menu-list li{
 	display: inline-block;
@@ -117,31 +117,42 @@ img {
  	display: -webkit-box;
  	display: -ms-flexbox;
  	display: flex;
- 	-ms-flex-wrap: wrap;
  	padding: 0;
+ 	align-items: center;
+ 	width: 380px;
 }
 
-.main-menu-list > li {
-	display: inline-block;
+.main-menu-list  li {
  	position: relative;
-	padding-bottom: 10px;
 	list-style: none;
 	margin: 0;
+	display: block;
+ 	border-radius: 20px;
+ 	box-sizing: border-box;
+
 }
 
-.main-menu-list > li > a {
- 	display: block;
- 	padding: 7px 14px;
+.main-menu-list  li a {
+ 	display: inline-block;
  	border-radius: 15px;
+ 	padding: 7px 14px;
  	border: none;
 }
 
-.main-menu-list > li > a[href]::after{
+
+.main-menu-list li .link::after{
  	content: "";
  	display: block;
  	height: 1px;
  	background-color: rgba(255, 255, 255, 0.2);
 }
+
+/*
+.main-menu-list > li > .main-menu-current::after{
+ 	display: none;
+}*/
+
+
 
 .main-menu-list > li:hover > a,
 .main-menu-list > li:focus > a {
@@ -251,7 +262,7 @@ img {
 
 /*user navigation*/
 .user-menu{
-	margin-left: auto;
+	margin-left: 338px;
 	position: relative;
 	z-index: 0;
 }
@@ -260,7 +271,6 @@ img {
 	display: flex;
 	align-items: center;
 	list-style: none;
-	margin: 0;
 	padding:0;
 }
 
@@ -278,6 +288,11 @@ img {
 .user-menu-list .btn:first-child{
 	margin-left:0px;
 }
+
+.header-contacts{
+	margin-left: auto;
+}
+
 
 /*users button*/
 .search{
@@ -558,6 +573,10 @@ input[type="submit"]:active {
 	position: relative;
 	margin: 0;
 	padding-bottom: 5px;
+}
+
+.basket-wrapper a {
+
 }
 
 .basket-window{
@@ -1659,7 +1678,9 @@ input[type="submit"]:active {
 .breadcrumbs a:hover,
 .breadcrumbs a:active {
 	color: #ffbc9e;
+    border-color: rgba(255,188,158,.3);
 }
+
 
 
 .footer-menu-flex span{
@@ -1917,16 +1938,31 @@ input[type="submit"]:active {
 /*catalog*/
 .main-menu-current{
 	background-color: #d07058; /*как убрать подчеркивание только у этой кнопки*/
+	border:none;
 }
 
 
-.user-menu .btn-basket-active{ /*?????????????????????????*/
-	background: url("..//img/svg-gllacy/basket-red.svg") 17px 7px no-repeat;
+.user-menu .btn-basket-active{
+	background: url("..//img/svg-gllacy/basket-red.svg") 15px 7px no-repeat;
 	background-color: white;
 	color:#000000;
+	width: 58px;
+	height: 13px;
+	padding: 10px 19px 10px 42px;
+	border-radius: 20px;
 }
 
 
+/*.user-menu .btn-basket-active a{
+	display: inline-block;
+	max-height: 16px;
+	box-sizing:border-box;
+	display: block;
+	vertical-align: middle;
+	font-size: 14px;
+	line-height:16px;
+}
+*/
 .site-wrapper-catalog {
   min-width: 940px;
   background-color: #849d8f;
@@ -1936,10 +1972,17 @@ input[type="submit"]:active {
 	position: relative;
 }
 
+.header-bottom-flex{
+	width: 100%;
+	max-height: 38px;
+}
+
 .breadcrumbs {
     display: flex;
     margin: 0;
     margin-top: -20px;
+    margin-bottom: 15px;
+    margin-right: auto;
     padding: 0;
     font-size: 14px;
     line-height: 16px;
@@ -1957,20 +2000,32 @@ input[type="submit"]:active {
 	font-weight: 16px;
 	font-weight: 200px;
 	color: #ffffff;
+	border-bottom: 1px solid rgba(255,255,255,.2);
 }
 
+.page-title{
+	margin: 0;
+	margin-bottom: 39px;
+	padding:0;
+	font-size: 35px;
+	line-height: 41px;
+}
 
 
 
 /*Фильтры*/
 .filters{
 	width: 100%;
-	max-height: 133px;
-	margin-bottom: 38px;
+	min-height: 136px;
+	margin-bottom: 40px;
+	padding: 0;
+	box-sizing: border-box;
 }
+
 .filters-form{
 	width: 865px;
-	max-height: 133px;
+	max-height: 136px;
+	box-sizing: border-box;
 }
 
 .filters-flex{
@@ -1978,9 +2033,8 @@ input[type="submit"]:active {
 	flex-direction: column;
 	justify-content: center;
 	width: 865px;
-	max-height: 195px;
-	margin-right: ;
-	margin-bottom: 40px;
+	max-height: 136px;
+	box-sizing: border-box;
 }
 
 .filters-top{
@@ -1999,9 +2053,10 @@ input[type="submit"]:active {
 	justify-content: space-between;
 	flex-wrap: nowrap;
 	width: 100%;
-	max-height:38px;
+	max-height:60px;
 	margin:0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 
@@ -2015,6 +2070,12 @@ input[type="submit"]:active {
 	max-height: 16px;
 }
 
+.sorting:nth-child(3),
+.sorting:last-child{
+	margin-right: 0;
+}
+
+/*фильтр по популярности*/
 .by-popularity select{
 	width: 193px;
 	min-height: 38px;
@@ -2033,27 +2094,99 @@ input[type="submit"]:active {
     background-color: #ffffff;
 }
 
-.price-range-box{
+/*фильтр по цене*/
+.by-price .price-range-wrapper label {
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: 500; 
+}
+
+.sorting .by-price { 
+	margin-bottom: 17px;
+	margin-right: 15px;
+	width: 220px; 
+}
+
+.by-price .price-range-wrapper { 
 	width: 220px;
-	max-height: 38px;
-	padding: 8px 23px;
-	box-sizing: border-box;
-    background-color: rgba(255,255,255,.2);
-    border-radius: 17px;
+	min-height: 38px
+	margin: 0;
+	padding: 0;
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: 500; 
+	white-space: nowrap; 
 }
 
-.price-range-box input{
-	width: 175px;
-	height: 5px;
-	background-color: #ffffff;
+.price-range-wrapper input{
+	display: none;
 }
 
+.sorting .by-priceinput .price-min,
+.sorting .by-price input .price-max { 
+	margin: 0; padding: 0 0; 
+	width: 25px; 
+	font-size: 14px; 
+	line-height: 16px; 
+	font-weight: 500; 
+	border: none; color: #ffffff; 
+	background-color: #849d8f; 
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box; 
+}
+
+.range-controls { 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box; 
+	position: relative; 
+	background-color: rgba(255, 255, 255, 0.2); 
+	margin-top: 0; padding: 16px 20px; 
+	border-radius: 20px; 
+}
+
+.range-controls .scale { 
+	height: 4px; 
+	background: rgba(255, 255, 255, 0.5); 
+}
+.range-controls .bar { 
+	margin-left: 10%; 
+	width: 60%; height: 4px; 
+	background: #ffffff; 
+}
+
+.toggle { 
+	position: absolute; 
+	top: 7px; width: 4px; 
+	height: 4px; 
+	background: #ababab; 
+	border: 8px solid #ffffff; 
+	border-radius: 50%; 
+	-webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2); 
+	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2); 
+	cursor: pointer; 
+}
+
+.toggle:hover { 
+	background: #1c4f80; 
+}
+
+.min-toggle {
+    left: 15%;
+}
+
+.max-toggle {
+    left: 60%;
+}
+
+
+
+/*фильтр по жирности*/
 .by-fat .fat-inputs-box{
 	width: 415px;
-	min-height: 38px;
+	min-height: 36px;
 	background-color: rgba(255,255,255,.2);
     border-radius: 17px;
-    padding: 7px 17px;
+    padding: 9px 17px;
     box-sizing:border-box;
     font-size: 16px;
     line-height: 18px;
@@ -2063,14 +2196,9 @@ input[type="submit"]:active {
     position: relative;
     margin-right: 10px;
     padding-left: 35px;
-
     cursor: pointer;
 }
-/**/
 
-.by-fat .fat-inputs-box input{
-	margin-right: 
-}	
 
 .by-fat input[type=radio]{
     display: none;
@@ -2078,14 +2206,14 @@ input[type="submit"]:active {
 
 
 .fat-filter-radio input[type="radio"] + .radio-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  box-sizing: border-box;
-  border: 4px solid rgba(255, 255, 255, 0.8);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 22px;
+	height: 22px;
+	border-radius: 50%;
+	box-sizing: border-box;
+	border: 4px solid rgba(255, 255, 255, 0.8);
 }
 
 
@@ -2094,47 +2222,30 @@ input[type="submit"]:active {
     position: absolute;
     top: 10px;
     left: 10px;
-    width: 10px;
-    height: 10px;
+    width: 9px;
+    height: 9px;
     margin-left: -7px;
-    margin-top: -6px;
+    margin-top: -7px;
     background-color: #ffffff;
     border-radius: 50%;
 }
 
-/*.fat-filter-radio input[type="radio"]:focus + .radio-indicator,
-.fat-filter-radio input[type="radio"]:active + .radio-indicator {
- 	border-color: #ffffff;
-   	border-radius: 50%;
-	border: 3px solid #ffffff;
-}
-*/
 
-/*.fillers-inputs-box{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 705px;
-	max-height: 38px;
-	padding: 8px 23px;
-	box-sizing: border-box;
-    background-color: rgba(255,255,255,.2);
-    border-radius: 17px;
-}*/
-
+/*фильтр по наполнителям*/
 .by-fillers .fillers-inputs-box{
 	width: 703px;
-	min-height: 38px;
+	min-height: 36px;
 	background-color: rgba(255,255,255,.2);
     border-radius: 17px;
-    padding: 13px 20px;
+    padding: 10px 16px 6px 16px;
     box-sizing:border-box;
     font-size: 16px;
     line-height: 18px;
 }
 
-.by-fillers input[type=checkbox] {
-    display: none;
+
+.by-fillers .fillers-inputs-box input[type=checkbox] {
+    display: block;
 }
 
 .by-fillers .fillers-inputs-box label {
@@ -2148,53 +2259,41 @@ input[type="submit"]:active {
     margin-right: 0;
 }
 
-.by-fillers .fillers-inputs-box input[type=checkbox]{
+.by-fillers .filler-filter-checkbox input[type=checkbox]{
     display: none;
 }
 
 
-.filler-filter-checkbox input[type="checkbox"] + .checkbox-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  box-sizing: border-box;
-  border: 3px solid rgba(255, 255, 255, 0.8);
+.checkbox-indicator span{ /************************/
+	display: block;
+	max-width: 25px;
+	max-height: 20px;
+}
+
+.filler-filter-checkbox input[type="checkbox"] + .checkbox-indicator { /************************/
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	background: url("..//img/svg-gllacy/checkbox-off.svg") center no-repeat;
 }
 
 
-.filler-filter-checkbox input:checked + .checkbox-indicator::after {
+.filler-filter-checkbox input[type="checkbox"]:checked  + .checkbox-indicator{ /*******************/
     content: '';
     position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 10px;
-    height: 10px;
-    margin-left: -5.5px;
-    margin-top: -5.5px;
-    background-color: #ffffff;
-    border-radius: 50%;
+    top: 0;
+    left: 0;
+    width: 25px;
+    height: 20px;
+    margin-left: 0px;
+    margin-top: 0px;
+	background: url("..//img/svg-gllacy/checkbox-on.svg") center no-repeat;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*Кнопка Применить*/
 .sorting-submit button{
 	width: 144px;
 	border: 2px solid #f6f8f7;
@@ -2202,7 +2301,7 @@ input[type="submit"]:active {
 	line-height:18px;
 	cursor: pointer;
 	color: #ffffff;
-	max-height: 38px;
+	max-height: 36px;
     padding: 9px 30px 13px 30px;
     box-sizing: border-box;
     background-color: rgba(255,255,255,.2);
@@ -2217,72 +2316,9 @@ input[type="submit"]:active {
 } 
 
 
-.sorting:nth-child(3),
-.sorting:last-child{
-	margin-right: 0;
-}
 
 
 
-/*
-.by-popularity select,
-.price-range-box,
-.fat-inputs-box,
-.fillers-inputs-box,
-.sorting-submit button{
-	display: inline-block;
-    background-color: rgba(255,255,255,.2);
-    border-radius: 17px;
-    max-height: 37px;
-
-
-    font-size: 16px;
-    line-height: 18px;
-    color: #fff;
-
-}
-
-.sorting:nth-child(3),
-.sorting:last-child{
-	margin-right: 0;
-}
-
-.by-price{
-	width: 220px;
-	margin: 0;
-}
-
-.price-select-box select{
-	width: 220px;
-    padding: 13px 64px 13px 15px;
-}
-
-
-
-
-.by-fat{
-	width: 415px;
-	margin: 0;
-}
-
-.fat-inputs-box{
-	width: 415px;
-	padding: 8px 15px;
-}
-
-.by-fillers{
-	width: 705px;
-	margin: 0;
-}
-
-.fillers-inputs-box{
-	width: 705px;
-	padding: 8px 15px;
-}
-
-
-}
-*/
 
 .list-wrapper{
 	display: flex;
@@ -2366,7 +2402,7 @@ input[type="submit"]:active {
     opacity: .2;
 }
 
-.pagination-list a:hover{ /****************************/
+.paginator-list a:hover{ /****************************/
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, .2);
 }
