--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 	color: #ffffff;
 	font-size: 16px; 
 	line-height: 22px;
-	font-family: "Roboto", "Arial", sans-serif;
+	font-family: "Roboto", Arial, sans-serif;
 }
 
 .container {
@@ -102,6 +102,7 @@ img {
 
 .main-menu-list li{
 	display: inline-block;
+	vertical-align: middle;
 
 	margin-right: 30px;
 
@@ -137,6 +138,8 @@ img {
 	position: relative;
 
 	display: inline-block;
+	vertical-align: middle;
+
 	margin: 0;
  	
 	padding-bottom: 10px;
@@ -301,10 +304,14 @@ img {
 
 .user-menu-list .btn{
 	display: inline-block;
+	vertical-align: middle;
+
+	max-height: 33px;
 	margin-left:9px;
+
 	background-color: rgba(255,255,255,.2); 
 	border-radius: 17px; 
-	max-height: 33px;
+	
 }
 
 .user-menu-list .btn:first-child{
@@ -611,6 +618,7 @@ input[type="submit"]:active {
 
 .login-form .entrance .help-wrapper a{
 	display: inline-block;
+	vertical-align: middle;
 
 	width: 100%;
 	padding: 0;
@@ -797,6 +805,7 @@ input[type="submit"]:active {
 
 .item-price-kg{
 	display: inline-block;
+	vertical-align: middle;
 
 	color: #b5b5b4;
 	text-align: right;
@@ -899,6 +908,7 @@ input[type="submit"]:active {
 
 .button {
   	display: inline-block;
+  	vertical-align: middle;
 
   	padding: 12px 44px;
 
@@ -944,6 +954,7 @@ input[type="submit"]:active {
 
 .slider-controls label {
  	display: inline-block;
+ 	vertical-align: middle;
 
  	width: 17px;
  	height: 17px;
@@ -1188,6 +1199,7 @@ input[type="submit"]:active {
 	z-index: 3;
 
 	display: inline-block;
+	vertical-align: middle;
 
 	margin: 0;
 
@@ -1238,6 +1250,7 @@ input[type="submit"]:active {
     left: 50%;
 
     display: inline-block;
+    vertical-align: middle;
 
     min-width: 195px;
     margin: 0;
@@ -1404,6 +1417,7 @@ input[type="submit"]:active {
 
 .blog a {
     display: inline-block;
+    vertical-align: middle;
 
     width: 300px;
 
@@ -1671,6 +1685,7 @@ input[type="submit"]:active {
 
 .footer-social ul li{
   	display: inline-block;
+  	vertical-align: middle;
 }
 
 .social-button{
@@ -2419,7 +2434,7 @@ input[type="submit"]:active {
 
 .feedback-label input:hover,
 .feedback-label textarea:hover{
-  border: 2px solid #c7c6c5;
+  border: 1px solid #c7c6c5;
 }
 
 .feedback-label input:active,
