--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ img {
 	        align-items: center;
 	-ms-flex-wrap: nowrap;
 	    flex-wrap: nowrap;
+
+	    max-height: 65px;
 }
 
 .logo{
@@ -111,7 +113,6 @@ img {
 	font-weight: bold;
 }
 
-
 .main-menu-list li:last-child{
 	margin-right: 0px;
 }
@@ -132,6 +133,7 @@ img {
  	-ms-flex-wrap: wrap;
 
  	padding: 0;
+ 	margin-top: 25px;
 }
 
 .main-menu-list > li {
@@ -140,12 +142,27 @@ img {
 	display: inline-block;
 	vertical-align: middle;
 
+	min-width: 55px;
 	margin: 0;
- 	
+	padding: 0;
 	padding-bottom: 10px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 
-	list-style: none;
-	
+
+	list-style: none;	
+}
+
+.main-menu-list > li:first-child {
+	max-width: 56px;
+}
+
+.main-menu-list > li:first-child {
+	max-width: 126px;
+}
+
+.main-menu-list > li:first-child {
+	max-width: 86px;
 }
 
 .main-menu-list > li > a {
@@ -155,6 +172,10 @@ img {
 
  	border-radius: 15px;
  	border: none;
+}
+
+.main-menu-list > li > a:last-child {
+ 	padding-left: 5px;
 }
 
 .main-menu-list > li > a[href]::after{
@@ -286,6 +307,7 @@ img {
 	z-index: 0;
 
 	margin-left: auto;
+	padding-right: 7px;
 }
 
 .user-menu-list{
@@ -321,17 +343,19 @@ img {
 /*users button*/
 .search{
 	position: relative;
+	left:5px;
     z-index: 1;
 
 	display: block;
 
-	width: 33px;
-	height: 33px;
+	width: 32px;
+	height: 32px;
 	padding: 8px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 
 	font-size: 0;
+
 	background-image: url("..//img/svg-gllacy/loupe.svg");
 	background-position: center ;
 	background-repeat: no-repeat;
@@ -342,6 +366,7 @@ img {
 .login,
 .basket{
     position: relative;
+    left: 5px;
 
     font-size: 14px;
     line-height: 16px;
@@ -369,7 +394,7 @@ img {
 }
 
 .basket a{
-	padding: 8px 35px 8px 45px;
+	padding: 8px 15px 8px 45px;
 
     background: url("..//img/svg-gllacy/basket.svg") 17px 7px  no-repeat;   
 }
@@ -882,7 +907,7 @@ input[type="submit"]:active {
 .slider {
  	position: relative;
 
- 	padding-top: 321px;
+ 	margin-top: 280px;
 
  	text-align: center;
   	color: #ffffff;
@@ -1039,9 +1064,9 @@ input[type="submit"]:active {
 }
 
 .banner{
-	width: 560px;
-	max-height: 225px;
-	padding: 20px 20px; 
+	width: 558px;
+	min-height: 227px;
+	padding: 15px 20px 20px 20px; 
 	-webkit-box-sizing: border-box; 
 	        box-sizing: border-box;
 
@@ -1058,7 +1083,7 @@ input[type="submit"]:active {
 }
 
 .banner-right{
-	margin-left:25px;
+	margin-left:28px;
 
 	background: url(..//img/banner-right.jpg);
 	background-repeat: no-repeat;
@@ -1066,15 +1091,19 @@ input[type="submit"]:active {
 }
 
 .banner h3{
+	display: inline-block;
+	vertical-align: middle;
+
 	margin-top: 0;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 
 	font-size: 35px;
+	line-height: 41px;
 }
 
 .banner p{
 	margin-top: 0;
-	margin-bottom: 48px;
+	margin-bottom: 43px;
 
 	font-size: 18px;
 	line-height: 22px;
@@ -1098,13 +1127,13 @@ input[type="submit"]:active {
 }
 
 .banner-left .button{
-	width: 166px;
+	width: 165px;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
 
 .banner-right .button{
-	width: 192px;
+	width: 188px;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
@@ -1150,7 +1179,7 @@ input[type="submit"]:active {
 .item-photo{
 	width: 267px;
 	max-height: 267px;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 }
 
 .item-photo img{
@@ -1172,7 +1201,7 @@ input[type="submit"]:active {
 
 .price{
 	position: absolute;
-	top:217px;
+	top:205px;
 	left:0;
 	z-index: 3;
 
@@ -1189,6 +1218,12 @@ input[type="submit"]:active {
 }
 
 .price span{
+	display: inline-block;
+	vertical-align: bottom;
+
+	margin: 0;
+	padding: 0;
+
 	font-size: 45px;
 	line-height: 45px;
 }
@@ -1201,6 +1236,7 @@ input[type="submit"]:active {
 	display: inline-block;
 	vertical-align: middle;
 
+	max-width: 260px;
 	margin: 0;
 
 	text-align: center;
@@ -1316,7 +1352,8 @@ input[type="submit"]:active {
     -webkit-box-direction: normal;
             flex-direction: column;
 
-    width: 46.55%;
+    width: 530px;
+    min-height: 148px;
     padding-left: 55px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -1338,17 +1375,28 @@ input[type="submit"]:active {
 
 
 .technology::before,
-.raw-materials::before,
-.contractors::before,
-.delivery::before{
+.raw-materials::before{
 	position: absolute;
 	content: '';
-    top: -15px;
+    top: -13px;
     left: -55px;
 
     width: 50px;
     height: 50px;
 }
+
+
+.contractors::before,
+.delivery::before{
+	position: absolute;
+	content: '';
+    top: -13px;
+    left: -65px;
+
+    width: 50px;
+    height: 50px;
+}
+
 
 .technology::before{
     background: url("..//img/svg-gllacy/ice-cream.svg");
@@ -1396,8 +1444,10 @@ input[type="submit"]:active {
             flex-direction: column;
 
     width: 560px;
-    padding: 23px 22px;
+    padding: 28px 21px;
     margin-right: 25px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     
     background-image: url("..//img/blog-background.jpg");
@@ -1419,13 +1469,22 @@ input[type="submit"]:active {
     display: inline-block;
     vertical-align: middle;
 
-    width: 300px;
+    width: 282px;
+    max-height: 84px;
 
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
     color:#323232;
     text-decoration:underline;
+}
+
+
+.other{
+	width: 560px;
+	max-height: 222px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .other-link:hover,
@@ -1554,7 +1613,7 @@ input[type="submit"]:active {
 .map-contacts{
 	position: absolute;
 	top:62px;
-	right: 2.5%;
+	right: 2.1%;
 
 	display: -webkit-box;
 
@@ -1607,6 +1666,12 @@ input[type="submit"]:active {
 }
 
 .telefon b{
+	display: inline-block;
+	vertical-align: middle;
+
+	max-height: 22px;
+	padding-top: 5px;
+
 	font-size: 18px;
     line-height: 22px;
 }
@@ -1619,7 +1684,10 @@ input[type="submit"]:active {
 .feedback-button{
     display: block;
 
+    max-height: 45px;
     padding: 10px 26px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     font-size: 18px;
     line-height: 24px;
@@ -1628,13 +1696,18 @@ input[type="submit"]:active {
     border-radius: 25px;
 }
 
- .location-icon{
+.location-icon{
 	position: absolute;
 	top: 139px;
 	left:266px;
 } 
 
 /*FOOTER*/
+.main-footer{
+	min-height: 57px;
+	margin-bottom: 26px;
+}
+
 .main-footer-wrapper{
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -1643,7 +1716,7 @@ input[type="submit"]:active {
 	    -ms-flex-align: center;
 	        align-items: center;
 
-	min-height: 105px;
+	max-height: 57px;
 	padding: 0;
 }
 
@@ -1652,17 +1725,19 @@ input[type="submit"]:active {
 	max-height: 39px;
 	margin: 0;
 	margin-right: 210px;
+	padding-top:17px;
 }
 
 .footer-menu{
 	width: 330px;
-	max-height: 39px;
+	min-height: 39px;
 	margin: 0;
 }
 
 .footer-copyright{
 	width: 191px;
 	min-height: 57px;
+	padding-top:15px;
 	margin: 0;
 	margin-left: auto;;
 }
@@ -1714,10 +1789,11 @@ input[type="submit"]:active {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	    flex-wrap: wrap;   
 
 	padding:0;
-	padding-left: 20px;
+	padding-top: 20px;
+	padding-left: 25px;
 }
 
 .footer-menu-flex a{
@@ -1729,7 +1805,7 @@ input[type="submit"]:active {
 
 .menu-providers,
 .menu-production{
-	width: 135px;
+	width: 141px;
 	margin-left: 20px;
 	margin: 0;
 }
@@ -1760,6 +1836,14 @@ input[type="submit"]:active {
 	background: url("..//img/svg-gllacy/heart.svg") 50% 50% no-repeat;
 }
 
+.page-title{
+	font-size: 35px;
+	line-height:41px;
+	padding: 0;
+	margin: 0;
+	margin-bottom: 30px;
+}
+
 .footer-menu a:hover,
 .footer-menu a:active,
 .breadcrumbs a:hover,
@@ -1769,6 +1853,12 @@ input[type="submit"]:active {
 
 .footer-menu-flex span{
 	border-bottom:1.2px solid #9db1a5;
+}
+
+.footer-copyright{
+	display: block;
+
+	padding-top: 10px; 
 }
 
 .footer-copyright p{
@@ -1806,10 +1896,10 @@ input[type="submit"]:active {
 	    -ms-flex-pack: center;
 	        justify-content: center;
 
-	width: 865px;
-	max-height: 136px;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	width: 858px;
+	max-height: 195px;
+	margin-right: ;
+	margin-bottom: 40px;
 }
 
 .filters-top{
@@ -1823,10 +1913,12 @@ input[type="submit"]:active {
 	    flex-wrap: nowrap;
 
 	width: 100%;
-	max-height:38px;
+	min-height:56px;
 	margin:0;
-	margin-bottom: 20px;
+	margin-bottom: 22px;
 	padding: 0;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .filter-label{
@@ -1834,11 +1926,18 @@ input[type="submit"]:active {
 
 	max-height: 16px;
 	margin: 0;
-	margin-bottom: 9px;
-	padding-left: 15px;
+	margin-bottom: 7px;
+	padding-left: 14px;
 
 	font-size: 14px;
 	line-height: 16px;
+}
+
+
+.sorting{
+	display: block;
+
+	min-height: 60px;
 }
 
 .sorting:nth-child(3),
@@ -1856,7 +1955,7 @@ input[type="submit"]:active {
 		appearance: none; 
 
 	width: 193px;
-	max-height: 36px;
+	min-height: 36px;
 	padding: 0; 
 	padding-left: 15px; 
 	padding-right: 35px;
@@ -1904,13 +2003,13 @@ input[type="submit"]:active {
 
 .sorting .by-price { 
 	width: 220px; 
+	min-height: 36px;
 	margin-bottom: 17px;
 	margin-right: 15px;
 }
 
 .by-price .price-range-wrapper { 
 	width: 220px;
-/*	min-height: 38px;*/
 	margin: 0;
 	padding: 0;
 
@@ -1925,7 +2024,7 @@ input[type="submit"]:active {
 	display: none;
 }
 
-.sorting .by-priceinput .price-min,
+.sorting .by-price input .price-min,
 .sorting .by-price input .price-max { 
 	width: 25px; 
 	margin: 0; 
@@ -1998,7 +2097,7 @@ input[type="submit"]:active {
 /*фильтр по жирности*/
 .by-fat .fat-inputs-box{
 	width: 415px;
-	max-height: 36px;
+	min-height: 36px;
 	padding: 9px 13px;
     -webkit-box-sizing:border-box;
             box-sizing:border-box;
@@ -2054,6 +2153,14 @@ input[type="submit"]:active {
 }
 
 /*фильтр по наполнителям*/
+.by-fillers{
+	display: block;
+
+	max-height: 56px;
+
+}
+
+/*
 .by-fillers .fillers-inputs-box{
 	width: 703px;
 	max-height: 12px;
@@ -2068,6 +2175,32 @@ input[type="submit"]:active {
     border-radius: 17px;
 }
 
+.by-fillers .fillers-inputs-box{
+	width: 703px;
+	min-height: 38px;
+
+   
+    padding: 13px 20px;
+    -webkit-box-sizing:border-box;
+            box-sizing:border-box;
+
+    font-size: 16px;
+    line-height: 18px;
+
+    background-color: rgba(255,255,255,.2);
+    border-radius: 17px;
+}
+*/
+
+.by-fillers .fillers-inputs-box{
+    padding: 10px 17px 10px 13px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+
+    line-height: 18px;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 20px;
+}
 
 .by-fillers .fillers-inputs-box input[type=checkbox] {
     display: block;
@@ -2443,7 +2576,7 @@ input[type="submit"]:active {
 }
 
 /*catalog*/
-.main-menu-current{
+.main-menu-current{ 
 	background-color: #d07058;
 }
 
@@ -2463,6 +2596,8 @@ input[type="submit"]:active {
 
 .inner-page{
 	position: relative;
+
+	min-height: 1360px; /**/
 }
 
 .breadcrumbs {
@@ -2503,24 +2638,6 @@ input[type="submit"]:active {
 	max-height: 133px;
 }
 
-.filters-flex{
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-
-	width: 865px;
-	max-height: 195px;
-	margin-right: ;
-	margin-bottom: 40px;
-}
-
 .filters-top{
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -2549,9 +2666,9 @@ input[type="submit"]:active {
         flex-wrap: nowrap;
 
     width: 100%;
-    max-height: 38px;
+    min-height: 56px;
     margin: 0;
-    margin-top:20px;
+  /*  margin-top:20px;*/
     padding: 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -2562,7 +2679,7 @@ input[type="submit"]:active {
 
 	max-height: 16px;
 	margin: 0;
-	margin-bottom: 9px;
+	margin-bottom: 8px;
 	padding-left: 15px;
 
 	font-size: 14px;
@@ -2616,6 +2733,11 @@ input[type="submit"]:active {
     cursor: pointer;
 }
 
+.by-fat{
+	width: 417px;
+
+}
+
 .by-fat .fat-inputs-box input{
 	margin-right: 
 }	
@@ -2653,22 +2775,6 @@ input[type="submit"]:active {
 
     background-color: #ffffff;
     border-radius: 50%;
-}
-
-.by-fillers .fillers-inputs-box{
-	width: 703px;
-	min-height: 38px;
-
-   
-    padding: 13px 20px;
-    -webkit-box-sizing:border-box;
-            box-sizing:border-box;
-
-    font-size: 16px;
-    line-height: 18px;
-
-    background-color: rgba(255,255,255,.2);
-    border-radius: 17px;
 }
 
 .by-fillers input[type=checkbox] {
@@ -2716,8 +2822,10 @@ input[type="submit"]:active {
 	        justify-content: space-between;
 	-ms-flex-wrap: wrap;
 	    flex-wrap: wrap;
+
+	max-height: 330px;    
 	padding: 0;
-	margin-bottom:40px;
+	margin-bottom:35px;
 }
 
 
@@ -2726,6 +2834,7 @@ input[type="submit"]:active {
 	width: 100%;
 	padding:0 -27px;
 	padding-bottom: 30px;
+	margin-bottom: 15px;
 
 	border-bottom: 1px solid rgba(255,255,255,.3);
 }
@@ -2805,4 +2914,3 @@ input[type="submit"]:active {
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, .2);
 }
-
